# kharon

./: .drone.yml  .env  Cargo.toml  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  rustfmt.toml  sqlx-data.json  tree.deps
.docker/: kharon.dockerfile
environments/: development.yaml
src/: main.rs  types.rs
src/auth/: auth_client.rs  authenticate_client.rs  mod.rs
src/auth_client/: auth_client.rs  authenticate_client.rs
src/authorization/: api.rs  input.rs  mod.rs
src/graphql/: client_guard.rs  mod.rs  utils.rs
src/graphql/authorization/: input.rs  mod.rs  mutation.rs  query.rs
src/init/: init_casbin.rs  init_database.rs  init_sqlx.rs  mod.rs
src/settings/: app.rs  casbin.rs  database.rs  mod.rs  server.rs
src/sql/migrations/: 00_init_casbin.sql  01_auth_client.sql  01_casbin_rules.sql
