[package]
name = "kharon"
version = "0.1.0"
authors = ["Simono il magnifico <simoneromano@tutanota.de>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP Server
actix-web = "3.3.2"
# GraphQL Implementation
async-graphql = "2.8.5"
# GraphQL Actix Adapter
async-graphql-actix-web = "2.8.5"
# Configuration helper
config = { version = "0.11.0", default-features = false, features = ["yaml"] }
# Lazy static evaluation
once_cell = "1.7.2"
# Serialization/Deserialization
serde = "1.0.126"
# SQLx
# sqlx = { version = "0.5.2", default-features = false, features = [ "runtime-actix-native-tls", "macros", "postgres", "migrate" ] }
# Casbin adapter for SQLx
# sqlx-adapter = { version = "0.4.1", default-features = false, features = ["postgres", "runtime-actix-native-tls", "offline"] }
# Casbin adapter for mongo
casbinrs-mongo-adapter = { git = "https://github.com/simoneromano96/casbinrs-mongo-adapter.git", rev = "b4257c9aee95332766acfe4d3aef211cc9f90e35" }
# Tokio runtime
tokio = "0.2.25"
